--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,5 +19,8 @@
     "react-dom": "^17.0.1",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1"
+  },
+  "dependencies": {
+    "react-router-dom": "^5.2.0"
   }
 }
